fix: report icons visibility

--- a/lzt-report-icons/report-icons.scss
+++ b/lzt-report-icons/report-icons.scss
@@ -15,6 +15,8 @@
   align-self: center !important;
   background-size: 100% !important;
   background-repeat: no-repeat !important;
+  background-color: transparent !important;
+  border-radius: unset !important;
   padding: 5px !important;
   margin: -5px 0 !important;
 }
